se configura conexion a bd

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,12 @@
 spring.application.name=parted
 server.port=8090
+
+# Configuracion de conexion a Oracle
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:ORCL
+spring.datasource.username=system
+spring.datasource.password=123456789
+
+# Configuracion adicional
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
